#**********************************************************************
#
#  REGCOM: Regimental Command
#  Copyright (C) 1997-2001 Randi J. Relander 
#  <rjrelander@users.sourceforge.net>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#  
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#  
#  You should have received a copy of the GNU General Public
#  License along with this program; if not, write to the Free
#  Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
#  MA 02111-1307, USA.
#  
#**********************************************************************

dnl ================================================
dnl  Process this file with autoconf to produce
dnl  a configure script.
dnl ================================================

AC_INIT(README)

dnl ================================================
dnl  Setup for automake
dnl ================================================

REGCOM_VERSION=0.0.4
SDL_VERSION=1.2.0

AM_INIT_AUTOMAKE(regcom,$REGCOM_VERSION)

dnl ================================================
dnl  Check for tools
dnl ================================================

AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl ================================================
dnl  Alpha Architecture Detect
dnl ================================================

AC_CANONICAL_HOST
AC_CANONICAL_TARGET
case "$target" in
    alpha*-*-linux*)
        CXXFLAGS="$CXXFLAGS -mcpu=ev4 -Wa,-mall"
        ;;
esac

dnl ================================================
dnl  Check for SDL
dnl ================================================

AM_PATH_SDL($SDL_VERSION,
            :,
	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
LIBS="$LIBS $SDL_LIBS"
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"

dnl ================================================
dnl  Expand data directory into GAMEDATADIR
dnl ================================================

GAME_EXPAND_DIR(
	game_datadir,"$datadir/games/$PACKAGE")

AC_DEFINE_UNQUOTED(GAME_DATADIR,"$game_datadir")

dnl ================================================
dnl  Finally create all the generated files
dnl ================================================

AC_OUTPUT([                     \
Makefile                        \
src/Makefile                    \
data/Makefile                   \
data/images/Makefile            \
docs/Makefile                   \
docs/images/Makefile            \
])
