AUTOMAKE_OPTIONS = gnu
bin_PROGRAMS = eversion
eversion_SOURCES = common.h control_device.cpp control_device.h entity.cpp entity.h font.cpp font.h game.cpp game.h gfxutil.h globals.h imagestack.cpp imagestack.h input_device.cpp input_device.h itoa.c itoa.h keyboard.cpp keyboard.h layer.cpp layer.h macros.h main.cpp main.h map.cpp map.h math.h mouse.cpp mouse.h net.cpp net.h sdl.h surface.cpp surface.h textbox.cpp textbox.h tileset.cpp tileset.h timer.h types.h window.cpp window.h
eversion_LIBS = `sdl-config --libs` -lSDL_net -lSDL_image