#**********************************************************************
#
#  REGCOM: Regimental Command
#  Copyright (C) 1997-2001 Randi J. Relander 
#  <rjrelander@users.sourceforge.net>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#  
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#  
#  You should have received a copy of the GNU General Public
#  License along with this program; if not, write to the Free
#  Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
#  MA 02111-1307, USA.
#  
#**********************************************************************

EXTRA_DIST = \
	Buttons.bmp Console.bmp ConsoleFont.bmp Cursor.bmp Pixels.bmp \
	Tile16.bmp Tile28.bmp Tile48.bmp Unit24.bmp Unit42.bmp Unit72.bmp

imagedir = $(datadir)/games/@PACKAGE@/images

image_DATA = $(EXTRA_DIST)
